[package]
name = "arikedb"
description = "Welcome to the ArikeDB Rust library! This library provides an interface to interact with the Arike Database, an advanced real-time database solution. This documentation will guide you through the process of setting up and using the library effectively."
license = "MIT"
homepage = "https://arikedb.com"
repository = "https://github.com/alejandroalfonsoyero/arikedb-rust"
authors = ["Alejandro <alejandroalfonso1994@gmail.com>"]
readme = "README.md"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[dependencies]
tonic = "*"
prost = "*"
tokio = {version = "*", features = ["full"]}
tokio-stream = "*"

[build-dependencies]
tonic-build = "0.11.0"
prost-build = "0.12.6"
