[package]
name = "arikedb"
description = "Welcome to the ArikeDB Rust library! This library provides an interface to interact with the Arike Database, an advanced real-time database solution. This documentation will guide you through the process of setting up and using the library effectively."
license = "MIT"
homepage = "https://arikedb.com"
repository = "https://github.com/Arikedb/arikedb-rust"
authors = ["Alejandro <alejandroalfonso1994@gmail.com>"]
readme = "README.md"
version = "0.0.4"
edition = "2021"
build = "build.rs"

[dependencies]
tonic = { version = "0.12.1", features = ["tls"] }
prost = "0.13.1"
tokio = {version = "1.39.2", features = ["full"]}
tokio-stream = "0.1.15"

[build-dependencies]
tonic-build = "0.12.1"
prost-build = "0.13.1"
